# news

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  render.yaml  script.js  vercel.json
api/: _pipeline.js  agents.js  chat.js  research.js  router.js  summarize.js
api/agent/: [name].js
backend/src/news_research/: __init__.py  config.py
backend/src/news_research/agents/: __init__.py
backend/src/news_research/agents/deep_research/: __init__.py  adapters.py  (+4 more)
backend/src/news_research/api/: main.py
backend/src/news_research/clients/: nanobanana_client.py  openrouter_client.py
backend/src/news_research/orchestration/: pipeline.py
backend/src/news_research/schemas/: contracts.py
backend/src/news_research/storage/: memory_store.py
backend/tests/: test_deep_research_agent.py
backend/tests/api/: test_api_flow.py
frontend/: .env.local.example  package-lock.json  package.json  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/components/: ExploreMoreGrid.tsx  SearchBar.tsx  SourcesList.tsx  SummaryPanel.tsx
frontend/src/lib/: api.ts
project/: .gitignore  README.md  package.json  vercel.json
project/api/: _pipeline.js  health.js  sources.js  summarize.js
project/backend/: .env.example  config.js  package-lock.json  package.json  server.js
project/backend/agents/: dedupeAgent.js  exploreAgent.js  headlineAgent.js  imageAgent.js  researchAgent.js  synthesizerAgent.js
project/frontend/: index.html  package.json  script.js  styles.css  vercel.json
project/frontend/api/: _pipeline.js  health.js  research.js  summarize.js
(+10 files in other folders)
